--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@google/generative-ai": "^0.1.3",
     "@hookform/resolvers": "^3.3.2",
+    "@radix-ui/react-select": "^2.2.6",
+    "@radix-ui/react-tooltip": "^1.2.8",
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.39.3",
     "@tanstack/react-query": "^5.17.15",
